<resources>
    <string name="app_name">WeatherApp</string>
    <string name="txt_weather_logo" translatable="false">Weather Logo</string>
    <string name="txt_weather_app_description">The Thanh Tho\'s Weather App</string>
    <string name="txt_home">Home</string>
    <string name="txt_settings">Settings</string>

    <string name="need_location_permission">App need location permission to work</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="location_permission_is_deny">Location permission is deny, please open Application\'s Settings to grant it</string>

    <string name="txt_temp_without_unit" translatable="false">%1$s°</string>
    <string name="txt_celsius_temp" translatable="false">%1$s°C</string>
    <string name="txt_celsius_feel_like" translatable="false">%1$s°C</string>

    <string name="txt_fahrenheit_temp" translatable="false">%1$s°F</string>
    <string name="txt_fahrenheit_feel_like" translatable="false">%1$s°F</string>

    <string name="txt_hpa_pressure" translatable="false">%1$s hPa</string>
    <string name="txt_percentage_humidity" translatable="false">%1$s%%</string>

    <string name="txt_celsius_dew_point" translatable="false">%1$s°C</string>
    <string name="txt_fahrenheit_dew_point" translatable="false">%1$s°F</string>

    <string name="txt_kilometer_visibility" translatable="false">%1$s km</string>
    <string name="txt_meter_visibility" translatable="false">%1$s m</string>

    <string name="txt_celsius_low_high_temp" translatable="false">%1$s°C / %2$s°C</string>
    <string name="txt_fahrenheit_low_high_temp" translatable="false">%1$s°F / %2$s°F</string>

    <string name="txt_wind_speed_meter_per_sec" translatable="false">%1$s m/s</string>
    <string name="txt_wind_speed_imperial_per_hour">%1$s miles/h</string>

    <string name="txt_description_meter">%1$s. High %2$s°C. Wind %3$s at %4$s m/s</string>

    <string name="txt_fahrenheit_temp_and_feel_like">%1$s°F - Feel Like: %2$s°F</string>

    <string name="txt_wind_meter_per_sec_compass_direction">Wind: %1$s m/s - %2$s</string>
    <string name="txt_wind_imperial_per_hour_compass_direction">Wind: %1$s miles/h - %2$s</string>

    <string name="txt_metric_day_description">Day - Sunrise at %1$s. High %2$s°C. Feel Like: %3$s°C</string>
    <string name="txt_imperial_day_description">Day - Sunrise at %1$s. High %2$s°F. Feel Like: %3$s°F</string>

    <string name="txt_metric_night_description">Night - Sunset at %1$s. Low %2$s°C. Feel Like: %3$s°C</string>
    <string name="txt_imperial_night_description">Night - Sunset at %1$s. Low %2$s°F. Feel Like: %3$s°F</string>

    <string name="txt_uvi_description">UV index: %1$s</string>
    <string name="txt_rain_volume">Rain: %1$s mm</string>
    <string name="txt_snow_volume">Snow: %1$s mm</string>

    <string name="txt_low">Low</string>
    <string name="txt_medium">Medium</string>
    <string name="txt_High">High</string>

    <string-array name="days_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="compass_directions">
        <item>North</item>
        <item>North-northeast</item>
        <item>Northeast</item>
        <item>East-northeast</item>
        <item>East</item>
        <item>East-southeast</item>
        <item>Southeast</item>
        <item>South-southeast</item>
        <item>South</item>
        <item>South-southwest</item>
        <item>Southwest</item>
        <item>West-southwest</item>
        <item>West</item>
        <item>West-northwest</item>
        <item>Northwest</item>
        <item>North-northwest</item>
        <item>North</item>
    </string-array>

    <string name="txt_feel_like">Feel Like</string>
    <string name="txt_pressure">Pressure</string>
    <string name="txt_humidity">Humidity</string>
    <string name="txt_dew_point">Dew Point</string>
    <string name="txt_uv_index">UV Index</string>
    <string name="txt_visibility">Visibility</string>
    <string name="txt_hourly">Hourly</string>
    <string name="txt_daily">Daily</string>
    <string name="txt_temperature">Temperature</string>
    <string name="txt_celsius">Celsius</string>
    <string name="txt_fahrenheit">Fahrenheit</string>
    <string name="txt_unit">Unit</string>
    <string name="txt_metric">Metric</string>
    <string name="txt_imperial">Imperial</string>
    <string name="txt_next_hours">Next Hours</string>
    <string name="txt_today">Today</string>
    <string name="txt_tomorrow">Tomorrow</string>
    <string name="txt_next_days">Next Days</string>
    <string name="txt_search_place">Search place</string>
    <string name="txt_description_imperial">%1$s. High %2$s\°F. Wind %3$s at %4$s miles/h</string>
    <string name="txt_celsius_temp_and_feel_like">%1$s\°C - Feel Like: %2$s\°C</string>
    <string name="txt_current_weather">Current Weather</string>
    <string name="txt_history">History</string>
    <string name="txt_your_search_history">Your searched place history</string>
    <string name="txt_language">Languages</string>
    <string name="txt_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="txt_english" translatable="false">English</string>
    <string name="txt_my_location">My location</string>
    <string name="txt_do_you_want_to_exit_application">Do you want to exit?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_choose_language">Choose other Language</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok" translatable="false">OK</string>
    <string name="txt_gps_network_not_enabled">Location Service is not enable, please enable it</string>
    <string name="txt_open_location_settings">Open Location Setting</string>
    <string name="need_location_setting">Application need Location Service is enabled to work</string>
    <string name="enable_it">Enable it</string>
    <string name="gps_provider_not_available">GPS Provider is not available</string>
    <string name="network_provider_not_available">Network Provider is not available</string>
    <string name="open_wireless_settings">Open Wireless Settings</string>
    <string name="txt_open_app_settings">Open Application\'s Settings</string>
    <string name="please_rating">Please spend a little minutes to review our application on PlayStore</string>
    <string name="txt_thank_you_message">Thank you for rating us</string>
    <string name="text_email_review_subject">My review on %1$s</string>
    <string name="please_choose_an_email_app">Please choose an Email app</string>
    <string name="system_email" translatable="false">tt.thanh.vu@tomosia.com</string>
    <string name="bold_text" translatable="false">&lt;b>%1$s&lt;/b></string>
    <string name="italic_text" translatable="false">&lt;i>%1$s&lt;/i></string>
    <string name="txt_weather_info_notification_description">Push notification about weather in current time</string>
    <string name="weather_info_channel_name">Information about weather notification</string>
    <string name="weather_info_channel_ID" translatable="false">WEATHER_INFO_NOTIFICATION</string>

    <plurals name="text_please_write_review">
        <item quantity="one">** Please write and send your review to us, we will response ASAP **\nI give you %d star because …</item>
        <item quantity="other">** Please write and send your review to us, we will response ASAP **\nI give you %d stars because …</item>
    </plurals>
</resources>