<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_7sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_16sdp"
    tools:context=".ui.BottomSettingFragment">

    <ImageButton
        android:id="@+id/button_setting"
        android:layout_width="@dimen/icon_weather_size_large"
        android:layout_height="@dimen/icon_weather_size_large"
        android:background="?android:selectableItemBackgroundBorderless"
        android:scaleType="center"
        android:src="@drawable/ic_my_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_my_location"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintBottom_toBottomOf="@+id/button_setting"
        app:layout_constraintStart_toEndOf="@+id/button_setting"
        app:layout_constraintTop_toTopOf="@+id/button_setting" />

    <TextView
        android:id="@+id/textViewUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_unit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_setting" />

    <RadioGroup
        android:id="@+id/radioGroupUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUnit">

        <RadioButton
            android:id="@+id/radioButtonMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_metric"
            android:textSize="@dimen/text_size_large" />

        <RadioButton
            android:id="@+id/radioButtonImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_imperial"
            android:textSize="@dimen/text_size_large" />
    </RadioGroup>

    <Button
        android:id="@+id/button_choose_language"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_text_view_5dp"
        android:text="@string/txt_choose_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupUnit" />

</androidx.constraintlayout.widget.ConstraintLayout>