<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_mode"
    android:padding="@dimen/_17sdp"
    tools:context=".ui.ExitDialogFragment">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLines="1"
        android:text="@string/txt_do_you_want_to_exit_application"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_yes"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:backgroundTint="@color/red"
        android:text="@string/txt_yes"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestion" />

    <Button
        android:id="@+id/button_no"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:backgroundTint="@color/green"
        android:text="@string/txt_no"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_yes"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>