<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_mode"
    android:orientation="vertical"
    android:padding="@dimen/_7sdp"
    tools:context=".ui.RatingDialogFragment">

    <TextView
        android:id="@+id/rating_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_rating"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_invitation" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:backgroundTint="@color/red"
        android:text="@string/txt_cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/button_ok"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/txt_ok"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

</androidx.constraintlayout.widget.ConstraintLayout>